<resources>
    <string name="app_name">Kalkulator Diskon</string>
    <string name="introCFC">Aplikasi ini merupakan penghitung diskon dengan mudah,cepat dan praktis, cobalah sekarang dan rasakan kemudahannya!</string>
    <string name="harga_hint">Harga (Rp)</string>
    <string name="diskon">Diskon (%)</string>
    <string name="hitung">Hitung</string>
    <string name="clear">Reset</string>
    <string name="nama_invalid">Masukan nama terlebih dahulu</string>
    <string name="harga_invalid">Masukan harga terlebih dahulu</string>
    <string name="diskon_invalid">Masukan diskon terlebih dahulu</string>
    <string name="tvTotal_x">Rp %.2f</string>
    <string name="tvNama_x">%1s</string>
    <string name="namaBarang">Nama Barang</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">Kalkulator Diskon merupakan sebuah aplikasi Android untuk menghitung harga suatu barang sehingga seseorang dapat mengetahui harga barang tersebut setelah mendapatkan diskon.\n\n temukan kodenya di https://github.com/Luckyy2/Assesment-Mobpro/tree/kalkulator_diskon_Ass2\n\nCopyright.\nAll rights reserved.</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">Nama Barang: %1$s \nHarga setelah diskon: %2$s \n</string>
    <string name="belum_ada_data">Data tidak kosong</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="histori">History</string>
    <string name="konfirmasi_hapus">Hapus semua history?</string>
    <string name="hapus">History telah dihapus</string>
    <string name="konfirmasi">Konfimasi</string>
    <string name="batal">Cancel</string>
    <string name="konfirmasi_hapus_satu">Apakah anda ingin menghapus data ini?</string>
    <string name="belum_ada_barang">Barang masih kosong</string>
    <string name="message">%1$s diklik!</string>
    <string name="koneksi_error">Koneksi Error</string>
    <string name="barang">List Barang</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data barang otomatis</string>
    <string name="notif_title">Ada barang baru!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>
</resources>