<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HitungDiskonFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/cantora_one"
            android:text="@string/introCFC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/namaHint"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tvIntro">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/nama_inp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/cantora_one"-->
<!--                android:hint="@string/namaBarang"-->
<!--                android:inputType="text"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hargaHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvIntro">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/harga_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cantora_one"
                android:hint="@string/harga_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/diskonHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/hargaHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/diskon_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cantora_one"
                android:hint="@string/diskon"
                android:inputType="number" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnHitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/cantora_one"
            android:text="@string/hitung"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btnClear"
            app:layout_constraintStart_toStartOf="@+id/diskonHint"
            app:layout_constraintTop_toBottomOf="@+id/diskonHint" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cantora_one"
            android:text="@string/clear"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/diskonHint"
            app:layout_constraintHorizontal_bias="0.731"
            app:layout_constraintStart_toStartOf="@+id/diskonHint"
            app:layout_constraintTop_toTopOf="@+id/btnHitung" />
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnHitung" />

        <TextView
            android:id="@+id/tvDisc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/cantora_one"
            android:text="Harga setelah diskon:"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/cantora_one"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDisc"
            tools:text="90000" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/bagikan"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvTotal"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toStartOf="@+id/tvTotal"
            app:layout_constraintTop_toBottomOf="@+id/tvTotal"
            android:visibility="invisible"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>